# lunabot-xmlq

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  kline-149.json  main.py  predictions-149-100.json  pyproject.toml  requirement  requirements.txt  test.py
config/: chatroom.yaml  global.yaml  helper.yaml  imgexp.yaml  record.yaml  water.yaml
config/chat/: autochat.yaml  system_prompt_python_ret.txt  tools_trigger_words.txt
config/llm/: reasoning_prompt.txt
config/llm/providers/: google.yaml  new-api.yaml
config/sekai/: asset.yaml  music_alias_sync.yaml  regions.yaml  sekai.yaml  snowy.yaml
config/sekai/bg_preset/: blue.yaml
config_docker/: global.yaml
config_docker/sekai/: sekai.yaml  snowy.yaml
example_config/: alive.yaml  bird.yaml  chatroom.yaml  gallery.yaml  global.yaml  helper.yaml  imgexp.yaml  imgtool.yaml  math.yaml  mc.yaml  rpc.yaml  sta.yaml  welcome.yaml
example_config/chat/: autochat.yaml  chat.yaml  image_caption_prompt.txt  system_prompt.txt  system_prompt_python_ret.txt  system_prompt_tools.txt  translate_prompt.txt
example_config/cron/: cron.yaml  system_prompt.txt
example_config/llm/: llm.yaml  model_preset.yaml  reasoning_prompt.txt
example_config/llm/providers/: ai-yyds.yaml  google.yaml  new-api.yaml  openrouter.yaml  siliconflow.yaml
example_config/llm/translator/: prompt_correct.txt  prompt_merge.txt  prompt_trans.txt  translator.yaml
example_config/sekai/: asset.yaml  bonds_honor_sd_face_pos.yaml  character_nicknames.yaml  gameapi.yaml  music_alias_sync.yaml  mysekai_phenomena_colors.yaml  mysekai_site_map_image_info.yaml  regions.yaml  sekai.yaml  sekairanking.yaml  snowy.yaml
example_config/sekai/bg_preset/: blue.yaml
example_config/sekai/story_summary/: card_story_summary_prompt.txt  event_story_summary_prompt_end.txt  event_story_summary_prompt_ep.txt  event_story_summary_prompt_head.txt  event_story_summary_prompt_start.txt
helps/: alive.md  bird.md  broadcast.md  chat.md  code.md  cron.md  gallery.md  general.md  imgexp.md  imgtool.md  main.md  math.md  mc.md  random.md  record.md  sekai.md  sta.md  water.md  welcome.md
src/: sekai_deck_recommend.py
src/api/assets/: asset.py  masterdata.py  music.py  rip.py
src/api/game/: event.py  misc.py  user.py
src/api/subscribe/: pjsk.py
src/common/: blacklist.py  config.py
src/deck_recommender/: serve.py
src/draw/: painter.py  plot.py
src/llm/: __init__.py  api_provider_manager.py
src/llm/api_providers/: aiyyds.py  api_provider.py  google.py  new_api.py  openrouter.py  siliconflow.py
src/pjsekai/: LICENSE  README.md
src/pjsekai/scores/: __init__.py  drawing.py  line.py  lyric.py  meta.py  rebase.py  score.py
src/pjsekai/scores/css/: black.css  default.css  guess.css  white.css
src/pjsekai/scores/notes/: __init__.py  base.py  event.py  slide.py  tap.py
src/pjsekai/scores/types/: fraction.py
src/plugins/alive/: __init__.py
src/plugins/bird/: __init__.py
src/plugins/bobing/: __init__.py
src/plugins/broadcast/: __init__.py
src/plugins/chat/: __init__.py  autochat.py
src/plugins/chatroom/: __init__.py
src/plugins/code/: __init__.py  run.py
src/plugins/common/: logger.py  process_pool.py
src/plugins/cron/: __init__.py
src/plugins/draw/: painter.py  plot.py
src/plugins/gallery/: __init__.py
src/plugins/helper/: __init__.py
src/plugins/imgexp/: __init__.py  imgexp.py
src/plugins/imgtool/: __init__.py  compile_imgtool_cpp.sh  cutout.cpp  imgtool.cpp  imgtool.notgit.py  imgtool.py  mirage.py
src/plugins/llm/: __init__.py  api_provider.py  api_provider_manager.py  translator.py
src/plugins/llm/api_providers/: aiyyds.py  google.py  new_api.py  openrouter.py  siliconflow.py
src/plugins/math/: __init__.py  oeis.py
src/plugins/mc/: __init__.py  log_service.py  rcon.py
src/plugins/misc/: __init__.py
src/plugins/random/: __init__.py
src/plugins/record/: __init__.py  sql.py
src/plugins/rpc/: __init__.py
src/plugins/sekai/: asset.py  common.py  draw.py  gameapi.py  handler.py  regions.py  sub.py
src/plugins/sekai/deck_recommender/: serve.py
src/plugins/sekai/modules/: __init__.py  card.py  (+23 more)
src/plugins/sta/: __init__.py  draw.py
src/plugins/statistics/: __init__.py  draw.py
src/plugins/utils/: __init__.py  blacklist.py  config.py  handler.py  img_utils.py  painter.py  plot.py  process_pool.py  rpc.py  safety.py  utils.py
src/plugins/water/: __init__.py  sql.py
src/plugins/webchat/: __init__.py
src/plugins/welcome/: __init__.py
src/scripts/: compile_imgtool_cpp.sh  imgtool.cpp
src/sekaiworld/scores/: __main__.py  drawing.py
src/services/autochat/: README.md  memory.py  requirements.txt  serve.py  utils.py
src/services/chatroom/: README.md  client.py  config.yaml  requirements.txt
src/services/deck_recommender/: config.py  config.yaml  serve.py  utils.py  worker.py
src/services/event_tracker/: README.md  gameapi.py  main.py  master.py  requirements.txt  sql.py  utils.py
src/services/event_tracker_v2/: README.md  main.py  requirements.txt
src/services/mc/: README.md  log_service.py
src/services/sk_forecast/: cli.py  fda_forecaster.py
src/utils/: __init__.py  config.py  data.py  env.py  handler.py  painter.py  plot.py  process_pool.py  request.py  rpc.py  safety.py  utils.py
(+5 files in other folders)
