[project]
name = "lunabot-sekai"
version = "0.1.0"
description = "lunabot-sekai"
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "aiohttp",
    "aiorpcx",
    "aiosmtplib",
    "aiosqlite",
    "ascii-magic",
    "asteval",
    "audioop-lts",
    "bs4>=0.0.2",
    "bypy",
    "colour-science",
    "emoji==2.0.0",
    "ffmpeg-python",
    "google-genai",
    "httpx",
    "imageio[ffmpeg]",
    "jieba",
    "mail",
    "matplotlib",
    "mcrcon",
    "mistune>=3.1.4",
    "nonebot-adapter-onebot",
    "nonebot-plugin-apscheduler",
    "nonebot-plugin-htmlrender==0.6.0",
    "nonebot-plugin-picstatus==2.1.3.post1",
    "nonebot2[fastapi]",
    "openai",
    "opencv-python-headless>=4.12.0.88",
    "orjson",
    "pandas",
    "pdf2image",
    "picimagesearch",
    "pilmoji[requests]",
    "pydub",
    "pyzbar>=0.1.9",
    "qrcode>=8.2",
    "rapidfuzz",
    "rembg>=2.0.69",
    "requests",
    "scikit-learn>=1.8.0",
    "sekai-deck-recommend-cpp",
    "sekaiworld-scores>=0.1.10",
    "setproctitle",
    "tenacity",
    "tencentcloud-sdk-python",
    "uvloop",
    "wordcloud",
    "yt-dlp",
    "zhconv>=1.4.3",
    "zhon",
    "zstandard",
]

# 配置镜像源
[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_picstatus"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.pytest.ini_options]
# Add the path to the directory containing the external test files.
# This tells pytest not to look inside these folders for tests.
norecursedirs = [
    ".git",
    ".venv",
    "sekai-deck-recommend-cpp",  # Add this line to exclude the problematic directory
    # or be more specific:
    # "sekai-deck-recommend-cpp/3rdparty"
]
